# tinymetrics

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/: FUNDING.yml
.github/workflows/: CI.yml
src/: atomic.rs  lib.rs  metric.rs  registry.rs  timestamp.rs
src/metric/: tests.rs
